# sharedMemoryProject

./: .cproject  .project  CMakeLists.txt  test.txt~
Matlab/: Test.m  TestingResults.m  convFunc.m  convolution  convolution.m  convolution.m~  convolutionMatlab.m  dotImage.m  imageRead.m  patternTest.m  readAll.m  styGenerator.m  values.m
sources/: generatepattern.cpp  generatepattern.h  header.h  main.cpp  reconstruction.h  reconstructionkernel.cu
textFiles/: Pattern.txt  StY.txt  StY_128.txt  StY_256.txt  convOutput.txt  convOutput.txt~  dotOutImage.txt  image.txt  image_128.txt  image_256.txt  kernel.txt  solverOutput.txt  solverOutput_128.txt  testKernel.txt~
texts/: Pattern.txt  Test  Test.m  TestShuffle.m  TestShufflem  X_coords.txt  Y_coords.txt
